[package]
name = "casserole"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
description = "Break and serialize values into content-addressable storage"
homepage = "https://github.com/da-x/casserole"
repository = "https://github.com/da-x/casserole"
keywords = ["serialization", "database"]
categories = ["encoding"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
autoexamples = false
resolver = "2"

[features]
default = []
json-store = ["ascii85", "rust-crypto", "serde_json"]

[[example]]
name = "casserole-main"
path = "example/main.rs"
required-features = ["json-store"]

[dependencies]
ascii85 = { version = "0.2", optional = true }
casserole-derive = { path = "casserole-derive", version = "0.1" }
rust-crypto = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"

[dev-dependencies]
serde = { version = "1.0", features = ["rc"] }
maplit = "1"
